# android-native

./: .gitignore  .gitmodules  Android.mk  AndroidManifest.xml  Makefile  README.md  gradle.properties  manual_build.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/programadorthi/activity/: MainActivity.java
app/src/main/native/: CMakeLists.txt  layout.c  layout.h  lv_conf.h  main.c  render.c  render.h  types.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  main.c
